feat: 新增導覽列 & 調整套件

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,41 +1,21 @@
+@import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap');
 
-@import './base.css';
+@font-face {
+  font-family: 'chenyuluoyan';
+  src:
+    url('/fonts/ChenYuluoyan-Thin-Monospaced.woff') format('woff'),
+    url('/fonts/ChenYuluoyan-Thin-Monospaced.ttf') format('truetype'),
+    url('/fonts/ChenYuluoyan-Thin-Monospaced.eot') format('embedded-opentype');
+}
 
 @tailwind base;
+
+@layer base {
+  a {
+    @apply opacity-80;
+  }
+}
+
 @tailwind components;
 @tailwind utilities;
-
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}
