--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,9 @@
+/* components */
+@import './components/loading.scss';
+
+/* font & icon */
 @import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap');
 
 @font-face {
   font-family: 'chenyuluoyan';
@@ -9,11 +13,12 @@
     url('/fonts/ChenYuluoyan-Thin-Monospaced.eot') format('embedded-opentype');
 }
 
+/* tailwind */
 @tailwind base;
 
 @layer base {
   a:hover {
-    @apply opacity-80;
+    @apply opacity-70;
   }
 }
 
