--- a/src/assets/css/components/loading.scss
+++ b/src/assets/css/components/loading.scss
@@ -15,39 +15,19 @@
   }
 }
 
-.loadingio-spinner {
-  width: 200px;
-  height: 200px;
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-}
-.ldio {
-  svg {
-    margin: 0 auto;
-    animation: ldio 1s cubic-bezier(0.47, 0, 0.75, 0.72) infinite;
-  }
+.ldio svg {
+  animation: ldio 1s cubic-bezier(0.47, 0, 0.75, 0.72) infinite;
 }
 
-.loading-text {
-  position: absolute;
-  transform: translate(50%, 60%);
-
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  text-align: center;
-  span {
-    display: inline-block;
-    margin: 0 0.1em;
-
-    animation: loading04 0.7s infinite;
-    @for $i from 1 through 6 {
-      &:nth-child(#{$i + 1}) {
-        animation-delay: #{$i * 0.1}s;
-      }
+.loading-text span {
+  animation: loading04 0.7s infinite;
+  @for $i from 1 through 6 {
+    &:nth-child(#{$i + 1}) {
+      animation-delay: #{$i * 0.1}s;
     }
   }
 }
+
 @keyframes loading04 {
   0%,
   100% {
