feat: 新增 CKEditor 套件 & 收藏商品功能

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,14 +2,6 @@
 @import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap');
 
-@font-face {
-  font-family: 'chenyuluoyan';
-  src:
-    url('/fonts/ChenYuluoyan-Thin-Monospaced.woff') format('woff'),
-    url('/fonts/ChenYuluoyan-Thin-Monospaced.ttf') format('truetype'),
-    url('/fonts/ChenYuluoyan-Thin-Monospaced.eot') format('embedded-opentype');
-}
-
 /* tailwind */
 @tailwind base;
 
@@ -24,3 +16,9 @@
 
 @tailwind components;
 @tailwind utilities;
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
