--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,7 +2,8 @@
 @import 'https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap');
 
-@import './base/base.css';
+@import 'base.css';
+@import 'components.css';
 
 /* tailwind */
 @tailwind base;
