--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -28,3 +28,25 @@
 .swal2-center {
   @apply pb-[15%];
 }
+
+.productCard img {
+  transition: 0.3s all;
+}
+.productCard:hover {
+  cursor: pointer;
+}
+.productCard:hover .card-img::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgb(0, 0, 0, 0.5);
+}
+.productCard:hover .view-detail {
+  display: block !important;
+}
+.productCard:hover img {
+  transform: scale(1.15);
+}
