feat: 新增優惠券 Modal & 完成更多商品區塊 & 部分優化

--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -22,11 +22,19 @@
 }
 
 .swal2-top {
-  @apply pt-[1%];
+  @apply pt-[5%] lg:pt-[1%];
 }
 
 .swal2-center {
   @apply pb-[15%];
+}
+
+.swal2-title {
+  @apply whitespace-nowrap;
+}
+
+body.swal2-toast-shown .swal2-container {
+  @apply min-w-[220px] sm:w-auto !important;
 }
 
 .productCard img {
