--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -10,7 +10,7 @@
 }
 
 .ck-content a {
-  @apply border-b text-info border-info;
+  @apply border-b border-info text-info;
 }
 
 .ck-balloon-panel {
@@ -24,11 +24,11 @@
 
 /* SweetAlert */
 .swal-btn-cancel {
-  @apply mx-1 my-0 text-sm rounded-full h-full py-2 px-8 focus:ring-4 focus:ring-brown-100 focus:ring-opacity-[.6] focus:shadow-none bg-brown-300 hover:bg-none hover:opacity-80 !important;
+  @apply mx-1 my-0 h-full rounded-full bg-brown-300 px-8 py-2 text-sm hover:bg-none hover:opacity-80 focus:shadow-none focus:ring-4 focus:ring-brown-100 focus:ring-opacity-[.6] !important;
 }
 
 .swal-btn-check {
-  @apply my-0 border-2 border-brown-300 border-solid py-2 mx-1 focus:ring-4 focus:ring-gray-200 focus:ring-opacity-[.6] focus:shadow-none text-sm text-brown-300 hover:bg-none hover:opacity-80  rounded-full px-8 bg-transparent !important;
+  @apply mx-1 my-0 rounded-full border-2 border-solid border-brown-300 bg-transparent px-8 py-2 text-sm text-brown-300 hover:bg-none hover:opacity-80 focus:shadow-none focus:ring-4 focus:ring-gray-200 focus:ring-opacity-[.6] !important;
 }
 
 .swal2-top {
@@ -47,7 +47,7 @@ body.swal2-toast-shown .swal2-container {
   @apply min-w-[220px] sm:w-auto !important;
 }
 
-.vld-overlay.is-full-page{
+.vld-overlay.is-full-page {
   z-index: 9999 !important;
 }
 
